--- a/style.css
+++ b/style.css
@@ -19,14 +19,7 @@ h3 {
     text-align:center;
 }
 
-.startRestart {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
-    margin-bottom: 20px;
 
-   
-}
 
 .scoreboard {
     font-size: 24px;
@@ -66,18 +59,23 @@ button {
 }
 
 
-#startButton {
-    font-size: 30px;
-    height: 50px;
-    background: green;
-    color: white;
-
-}
 #restartButton {
     font-size: 30px;
     height: 50px;
     background: red;
     color: white;
+    float:right;
+    margin-right: 70px;
+    margin-bottom: 20px;
+}
+#finishButton {
+    font-size: 30px;
+    height: 50px;
+    background: green;
+    color: white;
+    float:right;
+    margin-right: 70px;
+    margin-top: 20px;
 }
 
 
