Changed font color

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
 #finishButton {
     font-size: 30px;
     height: 50px;
-    background: green;
+    background: forestgreen;
     color: white;
     float:right;
     margin-right: 60px;
